--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,11 @@
+plugins {
+    id 'com.onesignal.androidsdk.onesignal-gradle-plugin' version '0.8.1'
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
 apply plugin: 'com.android.application'
 
 android {
@@ -8,6 +16,9 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [onesignal_app_id: "62af2e9f-d840-4895-9535-78f77dc4712e",
+                                // Project number pulled from dashboard, local value is ignored.
+                                onesignal_google_project_number: "REMOTE"]
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,6 +42,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.0.4'
 
     compile 'com.firebaseui:firebase-ui-database:0.6.2'
+    compile 'com.onesignal:OneSignal:[3.7.1, 3.99.99]'
+
 
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
