--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jason.sagy">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,12 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".ListService"
+            android:exported="false" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
         <activity android:name=".Registration" />
         <activity android:name=".Selection" />
@@ -24,7 +30,7 @@
         <activity android:name=".Introduction" />
         <activity android:name=".MP" />
         <activity android:name=".Village" />
-        <activity android:name=".notifications" />
+        <activity android:name=".Notifications" />
         <activity android:name=".Schemes" />
         <activity android:name=".Organ" />
         <activity android:name=".another" />
