--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,15 @@
         <activity android:name=".More" />
         <activity android:name=".anotherplus" />
         <activity android:name=".anotherplusplus"></activity>
+        <service
+            android:name=".NotificationService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.onesignal.NotificationExtender" />
+            </intent-filter>
+        </service>
     </application>
+
 
 </manifest>
