--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
 
 
         </activity>
+        <activity
+            android:name=".WelcomeActivity"/>
         <activity android:name=".Registration" />
-        <activity android:name=".Selection" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Introduction" />
         <activity android:name=".MP" />
