--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
 
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
+    // volley
+    compile 'com.android.volley:volley:1.0.0'
+
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
