--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.google.android.gms:play-services:11.0.4'
 
     compile 'com.firebaseui:firebase-ui-database:0.6.2'
     compile 'com.onesignal:OneSignal:[3.7.1, 3.99.99]'
