--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,11 @@
         <service
             android:name=".ListService"
             android:exported="false" />
-        <activity android:name=".Splash">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
-        </activity>
-        <activity
-            android:name=".WelcomeActivity"/>
+        <activity android:name=".Splash"></activity>
+        <activity android:name=".WelcomeActivity" />
         <activity android:name=".Registration" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".Introduction" />
         <activity android:name=".MP" />
         <activity android:name=".Village" />
@@ -62,20 +54,28 @@
         <activity android:name=".thetwelth" />
         <activity android:name=".thethirteenth" />
         <activity android:name=".thefourteenth" />
-        <activity android:name=".Grid" />
+        <activity android:name=".Grid">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Gallery" />
         <activity android:name=".More" />
         <activity android:name=".anotherplus" />
-        <activity android:name=".anotherplusplus"></activity>
+        <activity android:name=".anotherplusplus" />
+
         <service
             android:name=".NotificationService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="false">
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE">
             <intent-filter>
                 <action android:name="com.onesignal.NotificationExtender" />
             </intent-filter>
         </service>
-    </application>
 
+        <activity android:name=".ImageOpenActivity"></activity>
+    </application>
 
 </manifest>
