--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:0.6.2'
     compile 'com.onesignal:OneSignal:[3.7.1, 3.99.99]'
 
-
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile 'com.googlecode.android-query:android-query:0.24.3'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     // volley
     compile 'com.android.volley:volley:1.0.0'
